Feat: agora é possível deletar a conta

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <input type="number" id="mValor" name="valor" placeholder="Valor">
 
         <div id="mButtonsDiv">
-          <button type="button" id="mButtonDeletaConta">
+          <button type="button" id="deletarConta">
             Deletar conta
           </button>
 
